--- a/音樂班招生網站/index.html
+++ b/音樂班招生網站/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/Music_icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue</title>
+    <title>音樂班甄選入學暨術科測驗招生資訊網</title>
   </head>
   <body>
     <div id="app"></div>
